k8s/apps/node-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: node-exporter
  labels:
    app: node-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
spec:
  clusterIP: None # Headless service for DaemonSet
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
      protocol: TCP
  selector:
    app: node-exporter
